# fastapi-project-template

./: .env.local.example  .env.prod.example  .gitignore  AGENTS.md  README.md  justfile  makefile  prepare_project_dev.py  pyproject.toml
.githooks/: pre-commit  prepare-commit-msg
docker/prod/: Dockerfile  docker-compose.yml
docs/: about_just_autocomplete.md
docs/rules/: architecture.md
local/: .gitignore  docker-compose.example.yml  justfile.example  local.example.just  makefile.example
src/: main.py
src/features/: __init__.py
src/setup/api/: __init__.py
src/setup/db/: models.py  session.py
src/setup/db/migrations/: env.py
src/setup/db/migrations/versions/: 2026_07_18_1816-97b4ca24f838_init.py
src/setup/di/: ioc.py
src/shared/auth/api/: depends.py
src/shared/auth/api/v1/: __init__.py  router.py  schemas.py
src/shared/auth/application/: exceptions.py
src/shared/auth/application/converters/: auth_user.py
src/shared/auth/application/dto/: jwt.py  user.py
src/shared/auth/application/ports/: jwt.py
src/shared/auth/application/use_cases/: login.py  signup.py
src/shared/auth/infrastructure/adapters/: jwt.py  pwd.py
src/shared/contrib/: __init__.py  logger.py
src/shared/contrib/application/: __init__.py  dto.py  exceptions.py  use_case.py
src/shared/contrib/infrastructure/: __init__.py  models.py  schemas.py
src/shared/contrib/utils/: __init__.py  logger.py  serialization.py
src/shared/features/auth/api/: __init__.py  depends.py
src/shared/features/auth/api/v1/: router.py  schemas.py
src/shared/features/auth/application/: exceptions.py
src/shared/features/auth/application/converters/: auth_user.py
src/shared/features/auth/application/ports/: jwt.py  password.py
src/shared/features/user/application/: exceptions.py
src/shared/features/user/infrastructure/: models.py
src/shared/settings/: __init__.py  base.py  dev.py  local.py  prod.py
src/shared/user/application/: exceptions.py
src/shared/user/application/dto/: user.py
src/shared/user/application/ports/: repo.py
src/shared/user/infrastructure/adapters/: repo.py
src/shared/user/infrastructure/converters/: user.py
(+7 files in other folders)
