[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "diwire>=1.4.2",
    "fastapi[standard]>=0.139.0",
    "orjson>=3.11.9",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
